--- a/src/app/components/contact/contact.html
+++ b/src/app/components/contact/contact.html
@@ -28,7 +28,7 @@
             </div>
             <div class="method-content">
               <h3>Endereço</h3>
-              <p>São Paulo, SP - Brasil</p>
+              <p>Santos, SP - Brasil</p>
             </div>
           </div>
 
@@ -40,7 +40,7 @@
             </div>
             <div class="method-content">
               <h3>Telefone</h3>
-              <p>+55 (11) 99999-9999</p>
+              <p>+55 (13) 99211-1026</p>
             </div>
           </div>
 
